--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="form_test">
+  <meta name="google-signin-client_id" content="114273143423-v83roghb06tj7c9tkjpap51b141s1mlq.apps.googleusercontent.com">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
